credentials-events-service/00-ces-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ces
  labels:
    name: ces
---
