credentials-events-service/20-ces-deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ces
  namespace: ces
  labels:
    app: ces
spec:
  selector:
    matchLabels:
      app: ces
  replicas: 1
  template:
    metadata:
      labels:
        app: ces
    spec:
      containers:
      - name: ces
        image: registry.gitlab.com/gaia-x/lab/credentials-events-service:${IMAGETAG_CES}
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name:  ces-api
          protocol: TCP
      restartPolicy: Always
---
