credentials-events-service/29-ces-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ces
  namespace: ces
  labels:
    app: ces
spec:
  type: ClusterIP
  selector:
    app: ces
  ports:
    - name: ces-api
      port: 8080
      protocol: TCP
      targetPort: 8080
---
