credentials-events-service/30-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ces
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: postgres-port
      port: 5432
      protocol: TCP
      targetPort: 5432
---
